nsutils/tests/base/errors/noauth.trace
send 3 5 1 172
recv 2 5 255
